--- a/game/src/style/generic/_web-fonts.scss
+++ b/game/src/style/generic/_web-fonts.scss
@@ -8,14 +8,14 @@
 // Fonts
 ////////////////////////////////////////////////////////////////////////////////////////////
 
-@import url('https://fonts.googleapis.com/css?family=Ubuntu');
+// @import url('https://fonts.googleapis.com/css?family=Ubuntu');
 
-@font-face {
-  font-family: Ubuntu;
-  font-style: normal;
-  font-weight: 400;
-  src: url('https://fonts.googleapis.com/css?family=Ubuntu');
-}
+// @font-face {
+//   font-family: Ubuntu;
+//   font-style: normal;
+//   font-weight: 400;
+//   src: url('https://fonts.googleapis.com/css?family=Ubuntu');
+// }
 
 
 // @font-face {
